apps/overlays/zion/copyparty/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: copyparty-auth-middleware
  namespace: copyparty
spec:
  forwardAuth:
    # This address should point to the cluster endpoint provided by the kubernetes service, not the Ingress.
    address: http://auth-traefik-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
        - X-authentik-username
        - X-authentik-groups
        - X-authentik-entitlements
        - X-authentik-email
        - X-authentik-name
        - X-authentik-uid
        - X-authentik-jwt
        - X-authentik-meta-jwks
        - X-authentik-meta-outpost
        - X-authentik-meta-provider
        - X-authentik-meta-app
        - X-authentik-meta-version
        - X-IdP-User
        - X-IdP-Group
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: copyparty-forward-headers
  namespace: copyparty
spec:
  headers:
    customRequestHeaders:
      Host: "{http.host}"
      X-Real-Ip: "{http.request.remoteAddr}"
      X-Forwarded-For: "{http.request.headers.X-Forwarded-For}, {http.request.remoteAddr}"
      X-Forwarded-Proto: "https"
      # X-IdP-User: NOTE - These were added via Propery Mapping (Inside Customization)
      # X-IdP-Group: - and then added to the Provider - in Advanced protocol settings - Additional scopes
      # X-IdP-User: "{http.authenticator.headers.X-IdP-User}"
      # X-IdP-Group: "{http.authenticator.headers.X-IdP-Group}"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: copyparty-cors-middleware
  namespace: copyparty
spec:
  headers:
    accessControlAllowOriginList:
      - "https://copyparty.milanchis.com"
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
      - PUT
      - DELETE
    accessControlAllowHeaders:
      - Authorization
      - Content-Type
      - X-Requested-With
      - Origin
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
