apps/overlays/zion/copyparty/patch-volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  labels:
    app: copyparty
spec:
  template:
    spec:
      containers:
      - name: copyparty
        volumeMounts:
          - name: share
            mountPath: /w
            subPath: .

      volumes:  
      - name: share
        persistentVolumeClaim:
          claimName: share-pvc
