apps/overlays/zion/copyparty/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-traefik-outpost
  namespace: media
spec:
  type: ExternalName
  externalName: auth-traefik-outpost.authentik.svc.cluster.local
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: copyparty
  namespace: copyparty
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`copyparty.milanchis.com`)
      kind: Rule
      priority: 10
      services:
        - name: zion-copyparty
          port: 80
          sticky:
            cookie:
              name: copyparty-stickiness
              secure: true
              httpOnly: true
              sameSite: none
      middlewares:
        - name: zion-copyparty-auth-middleware
        - name: zion-copyparty-forward-headers
    - match: Host(`copyparty.milanchis.com`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: zion-auth-traefik-outpost
          port: 9000

  tls:
    secretName: copyparty-certificate-secret
